# column_control

./: .gitignore  analysis.py  main.py  pyproject.toml
presentations/: dsc_7_5_26.pptx
training_data/: column_ml_dataset.parquet  column_ml_dataset_sample.csv
