[project]
name = "dsc-winequality"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ensure>=1.0.4",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "logging>=0.4.9.6",
    "matplotlib>=3.10.8",
    "mlflow>=1.27.0",
    "notebook>=7.5.5",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "python-box>=7.4.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "types-pyyaml>=6.0.12.20260408",
]
